# lorem_rustum

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: data.rs  lib.rs
